--- a/components/AppDevelopmentCommon/utils/styles.module.scss
+++ b/components/AppDevelopmentCommon/utils/styles.module.scss
@@ -29,7 +29,7 @@
   max-width: 1076px;
   padding: 70px;
   margin: 80px auto 0;
-  background: $white;
+  background: $alabaster;
 
   h3 {
     @include fontSize(24px);
